feat: Add information about wine mortiño

--- a/src/app/components/hero-section/hero-section.component.css
+++ b/src/app/components/hero-section/hero-section.component.css
@@ -1,7 +1,8 @@
 
 .bg-image{
-  background-image:url("../../../assets/images/background.png");
+  background-image:url("../../../assets/images/imagenportada.jpg");
   background-repeat:no-repeat;
   background-size:100%;
-  background-position-y: 400px;
+  background-position-y: -400px;
+  color:#ffffff;
 }
