--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,49 +1,63 @@
-<div class="bg-slate-50">
-<div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8" id="products">
+<div class="bg-slate-200">
+  <img src="../../../assets/images/presentacion.png" alt="" width="100%">
+  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8" id="productos">
+    <h1 class="text-5xl mb-5 text-center">Productos</h1>
     <h2 class="text-2xl">Vinos</h2>
-
+    <p class="mt-3 mb-5">La pasión por la naturaleza se fusiona con la maestría enológica para crear una experiencia única en cada botella. Nuestra colección de Vinos el Último Inca, es la culminación de años de dedicación, innovación y amor por los páramos, capturando la esencia misma de este fruto excepcional.</p>
     <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
       <a href="#" class="group shadow-2xl">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-          <img src="../../../assets/images/vinomoriño.jpg" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <img src="../../../assets/images/vinomoriño.jpg"
+            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
+            class="h-full w-full object-cover object-center group-hover:opacity-75">
         </div>
-        <h3 class="mt-4 text-sm text-gray-700">Earthen Bottle</h3>
-        <p class="mt-1 text-lg font-medium text-gray-900">$48</p>
+        <h3 class="mt-4 text-sm text-gray-700">Vino de Mortiño</h3>
+        <p class="mt-1 text-lg font-medium text-gray-900">$8  - $5 -  $2.50</p>
       </a>
       <a href="#" class="group shadow-2xl">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-          <img src="../../../assets/images/vinoframbuesa.jpg" alt="Olive drab green insulated bottle with flared screw lid and flat top." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <img src="../../../assets/images/vinoframbuesa.jpg"
+            alt="Olive drab green insulated bottle with flared screw lid and flat top."
+            class="h-full w-full object-cover object-center group-hover:opacity-75">
         </div>
-        <h3 class="mt-4 text-sm text-gray-700">Nomad Tumbler</h3>
-        <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
+        <h3 class="mt-4 text-sm text-gray-700">Vino de Frambuesa</h3>
+        <p class="mt-1 text-lg font-medium text-gray-900">$9  - $6 -  $2.75</p>
       </a>
       <a href="#" class="group shadow-2xl">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-          <img src="../../../assets/images/vinomora.jpg" alt="Person using a pen to cross a task off a productivity paper card." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <img src="../../../assets/images/vinomora.jpg"
+            alt="Person using a pen to cross a task off a productivity paper card."
+            class="h-full w-full object-cover object-center group-hover:opacity-75">
         </div>
-        <h3 class="mt-4 text-sm text-gray-700">Focus Paper Refill</h3>
-        <p class="mt-1 text-lg font-medium text-gray-900">$89</p>
+        <h3 class="mt-4 text-sm text-gray-700">Vino de Mora</h3>
+        <p class="mt-1 text-lg font-medium text-gray-900">$8  - $5 -  $2.50</p>
       </a>
       <a href="#" class="group shadow-2xl">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-          <img src="../../../assets/images/vinomaracuya.jpg" alt="Hand holding black machined steel mechanical pencil with brass tip and top." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <img src="../../../assets/images/vinomaracuya.jpg"
+            alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+            class="h-full w-full object-cover object-center group-hover:opacity-75">
         </div>
-        <h3 class="mt-4 text-sm text-gray-700">Machined Mechanical Pencil</h3>
-        <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
+        <h3 class="mt-4 text-sm text-gray-700">Vino de Maracuya</h3>
+        <p class="mt-1 text-lg font-medium text-gray-900">$8  - $5 -  $2.50</p>
       </a>
       <a href="#" class="group shadow-2xl">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-          <img src="../../../assets/images/vinopitajaya.jpg" alt="Hand holding black machined steel mechanical pencil with brass tip and top." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <img src="../../../assets/images/vinopitajaya.jpg"
+            alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+            class="h-full w-full object-cover object-center group-hover:opacity-75">
         </div>
-        <h3 class="mt-4 text-sm text-gray-700">Machined Mechanical Pencil</h3>
-        <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
+        <h3 class="mt-4 text-sm text-gray-700">Vino de Pitahaya</h3>
+        <p class="mt-1 text-lg font-medium text-gray-900">$8  - $5 -  $2.50</p>
       </a>
       <a href="#" class="group shadow-2xl">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-          <img src="../../../assets/images/vinojamaica.jpg" alt="Hand holding black machined steel mechanical pencil with brass tip and top." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <img src="../../../assets/images/vinojamaica.jpg"
+            alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+            class="h-full w-full object-cover object-center group-hover:opacity-75">
         </div>
-        <h3 class="mt-4 text-sm text-gray-700">Machined Mechanical Pencil</h3>
-        <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
+        <h3 class="mt-4 text-sm text-gray-700">Vino de Jamaica</h3>
+        <p class="mt-1 text-lg font-medium text-gray-900">$8  - $5 -  $2.50</p>
       </a>
     </div>
   </div>
