--- a/src/app/components/testimonies/testimonies.component.html
+++ b/src/app/components/testimonies/testimonies.component.html
@@ -1,1 +1,64 @@
-<p>testimonies works!</p>
+<!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com -->
+<div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8" id="testimonios">
+<div class="mx-auto text-center md:max-w-xl lg:max-w-3xl">
+  <h3
+    class="mb-6 text-5xl font-bold text-neutral-800">
+    Testimonios
+  </h3>
+  <p class="mb-6 pb-2 md:mb-12 md:pb-0">
+    Descubre cómo la magia de los páramos se transforma en cada sorbo de nuestros exquisitos vinos de mortiño. No hay mejor manera de conocer la calidad y el encanto de nuestros productos que a través de las experiencias compartidas por aquellos que han tenido el placer de degustarlos.
+  </p>
+</div>
+
+<!-- Container for the Testimonials -->
+<div class="grid gap-6 text-center md:grid-cols-3 lg:gap-12">
+  <!-- First Testimonial -->
+  <div class="mb-12 md:mb-0">
+    <div class="mb-6 flex justify-center">
+      <img
+        src="https://tecdn.b-cdn.net/img/Photos/Avatars/img%20(1).jpg"
+        class="w-32 rounded-full shadow-lg dark:shadow-black/30" alt="personas"/>
+    </div>
+    <h5 class="mb-4 text-xl font-semibold">Maria Smantha</h5>
+    <h6 class="mb-4 font-semibold text-primary dark:text-primary-500">
+      Web Developer
+    </h6>
+    <p class="mb-4">
+
+      "Cada botella es una obra maestra de la naturaleza. El vino de mortiño ha conquistado mi paladar y mi corazón. ¡Una delicia que todos deberían experimentar!"
+    </p>
+  </div>
+
+  <!-- Second Testimonial -->
+  <div class="mb-12 md:mb-0">
+    <div class="mb-6 flex justify-center">
+      <img
+        src="https://tecdn.b-cdn.net/img/Photos/Avatars/img%20(2).jpg"
+        class="w-32 rounded-full shadow-lg" alt="personas" />
+    </div>
+    <h5 class="mb-4 text-xl font-semibold">Lisa Cudrow</h5>
+    <h6 class="mb-4 font-semibold text-primary">
+      Graphic Designer
+    </h6>
+    <p class="mb-4">
+      "No solo es una bebida, es una experiencia sensorial completa. Desde el primer sorbo, te transporta a los majestuosos páramos, creando recuerdos inolvidables."
+    </p>
+  </div>
+  <div class="mb-12 md:mb-0">
+    <div class="mb-6 flex justify-center">
+      <img
+        src="https://tecdn.b-cdn.net/img/Photos/Avatars/img%20(2).jpg"
+        class="w-32 rounded-full shadow-lg" alt="personas"/>
+    </div>
+    <h5 class="mb-4 text-xl font-semibold">Lisa Cudrow</h5>
+    <h6 class="mb-4 font-semibold text-primary">
+      Graphic Designer
+    </h6>
+    <p class="mb-4">
+
+      "Nunca pensé que el mortiño pudiera convertirse en una obra maestra líquida. Vuestra dedicación a la excelencia se refleja en cada gota. ¡Felicidades por este regalo para el paladar!"
+
+    </p>
+  </div>
+</div>
+</div>
