--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
- <header class="absolute inset-x-0 top-0 z-50 background-color">
+ <div class="relative">
+ <header class="inset-x-0 z-50 background-color fixed left-0 right-0 top-0">
     <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
       <div class="flex lg:flex-1">
         <a href="#" class="-m-1.5 p-1.5">
@@ -15,8 +16,8 @@
         </button>
       </div>
       <div class="hidden lg:flex lg:gap-x-12">
-        <a href="#products" class="text-sm font-semibold leading-6 ">PRODUCTOS</a>
         <a href="#historia" class="text-sm font-semibold leading-6 ">HISTORIA</a>
+        <a href="#productos" class="text-sm font-semibold leading-6 ">PRODUCTOS</a>
         <a href="#testimonios" class="text-sm font-semibold leading-6 ">TESTIMONIOS</a>
         <a href="#" class="text-sm font-semibold leading-6 ">CONTACTOS</a>
       </div>
@@ -39,8 +40,8 @@
         <div class="mt-6 flow-root text-white">
           <div class="-my-6 divide-y divide-gray-500/10">
             <div class="space-y-2 py-6">
-              <a href="#productos" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">PRODUCTOS</a>
               <a href="#historia" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">HISTORIA</a>
+              <a href="#productos" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">PRODUCTOS</a>
               <a href="#testimonios" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">TESTIMONIOS</a>
               <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">CONTACTOS</a>
             </div>
@@ -49,3 +50,4 @@
       </div>
     </div>
   </header>
+</div>
