--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -1,9 +1,24 @@
-<div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8" id="historia">
-<h2>Historia</h2>
+<div
+  class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8"
+  id="historia"
+>
+  <h1 class="text-center text-5xl">Historia</h1>
   <div class="mx-auto max-w-7xl py-3">
-    <div class="relative isolate overflow-hidden px-6 pt-16 shadow-2xl sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
-      <svg viewBox="0 0 1024 1024" class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-y-1/2 [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2 lg:translate-y-0" aria-hidden="true">
-        <circle cx="512" cy="512" r="512" fill="url(#759c1415-0410-454c-8f7c-9a820de03641)" fill-opacity="0.7" />
+    <div
+      class="relative isolate overflow-hidden px-6 pt-16 shadow-2xl sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0"
+    >
+      <svg
+        viewBox="0 0 1024 1024"
+        class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-y-1/2 [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2 lg:translate-y-0"
+        aria-hidden="true"
+      >
+        <circle
+          cx="512"
+          cy="512"
+          r="512"
+          fill="url(#759c1415-0410-454c-8f7c-9a820de03641)"
+          fill-opacity="0.7"
+        />
         <defs>
           <radialGradient id="759c1415-0410-454c-8f7c-9a820de03641">
             <stop stop-color="#7775D6" />
@@ -11,15 +26,164 @@
           </radialGradient>
         </defs>
       </svg>
-      <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left">
-        <h2 class="text-3xl font-bold tracking-tight text-red-950 sm:text-4xl">Nuestra Planta</h2>
-        <p class="mt-6 text-lg leading-8 text-yellow-700">aqui va toda la historia</p>
-        <div class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start">
-          <a href="#" class="rounded-md bg-blue-900 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Leer más</a>
+      <div
+        class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left"
+      >
+        <h2 class="text-3xl font-bold tracking-tight text-red-950 sm:text-4xl">
+          Nuestra Planta
+        </h2>
+        <p class="mt-6 text-lg leading-8">
+          Comenzamos nuestra travesía en el año 2011 con un sueño
+          extraordinario: elaborar el vino de mortiño definitivo. <br />
+          Nos destacamos como una empresa dedicada a la producción y
+          comercialización de vino, guiados por la pasión y el compromiso con la
+          excelencia. <br />
+          Nuestra inspiración radica en continuar trabajando con entusiasmo y
+          ofrecer calidad excepcional bajo nuestra marca, elevando así el valor
+          de nuestros productos y generando una ventaja competitiva que nos
+          distingue en el mercado.
+        </p>
+        <div
+          class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start"
+        >
+          <a
+            href="#"
+            class="rounded-md bg-blue-900 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
+            type="button"
+            data-te-toggle="modal"
+            data-te-target="#exampleModalFullscreen"
+            data-te-ripple-init
+            data-te-ripple-color="light"
+            >Leer más</a
+          >
         </div>
       </div>
       <div class="relative mt-16 h-80 lg:mt-8">
-        <img class="absolute left-0 top-0 w-[40rem] max-w-none rounded-md bg-white/5 ring-1 ring-white/10" src="../../../assets/images/planta.jpg" alt="App screenshot" width="1824" height="1080">
+        <img
+          class="absolute left-0 top-0 w-[40rem] max-w-none rounded-md"
+          src="../../../assets/images/planta.jpg"
+          alt="Planta El Último Inca"
+        />
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div
+  data-te-modal-init
+  class="fixed left-0 top-0 z-[1055] hidden h-full w-full overflow-y-auto overflow-x-hidden outline-none"
+  id="exampleModalFullscreen"
+  tabindex="-1"
+  aria-labelledby="exampleModalFullscreenLabel"
+  aria-hidden="true"
+>
+  <div
+    data-te-modal-dialog-ref
+    class="pointer-events-none relative w-auto translate-y-[-50px] opacity-0 transition-all duration-300 ease-in-out min-[0px]:m-0 min-[0px]:h-full min-[0px]:max-w-none"
+  >
+    <div
+      class="pointer-events-auto relative flex w-full flex-col rounded-md bg-white  outline-none min-[0px]:h-full min-[0px]:rounded-none min-[0px]:border-0q"
+    >
+      <div
+        class="flex flex-shrink-0 items-center justify-between rounded-t-md border-b-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50 min-[0px]:rounded-none"
+      >
+        <h5></h5>
+        <button
+          type="button"
+          class="box-content rounded-none border-none hover:no-underline hover:opacity-75 focus:opacity-100 focus:shadow-none focus:outline-none"
+          data-te-modal-dismiss
+          aria-label="Close"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-6 w-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M6 18L18 6M6 6l12 12"
+            />
+          </svg>
+        </button>
+      </div>
+      <div class="lg:columns-2 lg:px-40 sm:columns-1 sm:px-0 bg-white">
+        <div class="relative p-4 min-[0px]:overflow-y-auto">
+          <h2 class="text-4xl mb-5">Nuestros Inicios</h2>
+          <p class="mb-8">
+            Empezamos en el año 2011 con un sueño, crear el mejor vino de
+            mortiño, somos una empresa que se dedica a la producción y
+            comercialización de vino. Estamos inspirados en seguir trabajando
+            con entusiasmo y calidad por nuestra marca, agregando un valor al
+            producto y generando ventaja competitiva.
+          </p>
+
+          <h2 class="text-4xl mb-5">Nuestra Pasión</h2>
+
+          <p class="mb-8">
+            Cada copa de nuestro vino ofrece una experiencia única en nuestros
+            consumidores. Nuestra marca “El Último Inca” hoy se ha convertido en
+            la marca de vinos más respetada del país.
+          </p>
+          <h2 class="text-4xl mb-5">Nuestros Artesanos</h2>
+          <p class="mb-8">
+            Nuestros artesanos son personas hacendosas y lo bonito de sus vidas
+            es construir sueños, labrar historias y desatar los nudos de
+            nuestros días.
+          </p>
+
+          <h2 class="text-4xl mb-5">Historia</h2>
+          <p class="mb-8">
+            El último Inca es la marca artesanal de vino de mortiño que producen
+            23 socios, con visión de futuro, innovación y espíritu pionero,
+            elaboraron las primeras botellas de vino de mortiño. En poco tiempo
+            se han consolidado la planta de producción y han colocado sus vinos
+            entre los vinos más afamados del país. Lo invitamos a conocer
+            algunos de los grandes hitos que han marcado la historia de esta
+            planta de producción, que actualmente es uno de los principales
+            referentes de la exitosa industria vitivinícola.
+          </p>
+
+          <h2 class="text-4xl mb-5">Misión</h2>
+          <p class="mb-8">
+            Ser una empresa líder en la producción y distribución de Vino de
+            Mortiño, con reconocimiento en el mercado vinícola local y nacional,
+            ofreciendo un producto del resultado de un proceso con altos
+            estándares de calidad y buenas prácticas de manufactura que
+            satisfaga los paladares más exigentes.
+          </p>
+
+          <h2 class="text-4xl mb-5">Visión</h2>
+          <p class="mb-8">
+            Posicionar sólidamente a la empresa EL ÚLTIMO INCA dentro del
+            mercado local y nacional como líder y pionera en la producción de
+            vinos de Mortiño y caracterizarse por una producción que cumpla con
+            procesos de estricto control de calidad, teniendo un impacto
+            positivo en mejorar la calidad de vida de sus integrantes.
+          </p>
+        </div>
+        <div>
+          <img
+            src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=590,h=935,fit=crop,trim=0;52.52564102564103;0;0/YNq94LO55GS6l4Zk/botellap-AGBq27wDJjU25rbL.png"
+            alt=""
+            class="w-full rounded-lg"
+          />
+        </div>
+      </div>
+      <div
+        class="mt-auto flex flex-shrink-0 flex-wrap items-center justify-end rounded-b-md border-t-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50 min-[0px]:rounded-none"
+      >
+        <button
+          type="button"
+          class="inline-block rounded bg-blue-900 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white transition duration-150 ease-in-out hover:bg-blue-800 focus:bg-blue-500 focus:outline-none focus:ring-0"
+          data-te-modal-dismiss
+        >
+          Cerrar
+        </button>
       </div>
     </div>
   </div>
