feat: añadir  imagenes de testimonios, agregar diseño al proceso

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
         <a href="#historia" class="text-sm font-semibold leading-6 ">HISTORIA</a>
         <a href="#productos" class="text-sm font-semibold leading-6 ">PRODUCTOS</a>
         <a href="#testimonios" class="text-sm font-semibold leading-6 ">TESTIMONIOS</a>
-        <a href="#" class="text-sm font-semibold leading-6 ">CONTACTOS</a>
+        <a href="#contactanos" class="text-sm font-semibold leading-6 ">CONTACTOS</a>
       </div>
     </nav>
     <div class="" role="dialog" aria-modal="true" *ngIf="isMenuOpen">
@@ -43,7 +43,7 @@
               <a href="#historia" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">HISTORIA</a>
               <a href="#productos" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">PRODUCTOS</a>
               <a href="#testimonios" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">TESTIMONIOS</a>
-              <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">CONTACTOS</a>
+              <a href="#contactanos" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">CONTACTOS</a>
             </div>
           </div>
         </div>
