--- a/src/app/components/process/process.component.html
+++ b/src/app/components/process/process.component.html
@@ -4,48 +4,111 @@
     Descubre el proceso artesanal que da vida a nuestras exquisitas creaciones.
   </p>
 </section>
-
-<section class="container mx-auto mt-8 p-8 bg-white shadow-lg">
-  <div class="mb-8">
-    <h3 class="text-2xl font-bold mb-4">
-      Paso 1: Cosecha en las Faldas de los Ilinizas
-    </h3>
-    <p>
+<div class="bg-slate-200">
+<section class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8 ">
+<ul
+  class="relative m-0 w-full list-none overflow-hidden p-0 transition-[height] duration-200 ease-in-out"
+  data-te-stepper-init
+  data-te-stepper-type="vertical">
+  <li
+    data-te-stepper-step-ref
+    class="relative h-fit after:absolute after:left-[2.45rem] after:top-[3.6rem] after:mt-px after:h-[calc(100%-2.45rem)] after:w-px after:bg-[#e0e0e0] after:content-['']">
+    <div
+      data-te-stepper-head-ref
+      class="flex cursor-pointer items-center p-6 leading-[1.3rem] no-underline after:bg-[#e0e0e0] after:content-[''] hover:bg-[#f9f9f9] focus:outline-none]">
+      <span
+        data-te-stepper-head-icon-ref
+        class="mr-3 flex h-[1.938rem] w-[1.938rem] items-center justify-center rounded-full bg-[#ebedef] text-sm font-medium text-[#40464f]">
+        1
+      </span>
+      <span
+        data-te-stepper-head-text-ref
+        class="text-neutral-500 after:absolute after:flex after:text-[0.8rem] after:content-[data-content] ">
+        Cosecha
+      </span>
+    </div>
+    <div
+      data-te-stepper-content-ref
+      class="transition-[height, margin-bottom, padding-top, padding-bottom] left-0 overflow-hidden pb-6 pl-[3.75rem] pr-6 duration-300 ease-in-out">
       En las pintorescas faldas de los Ilinizas, recolectamos cuidadosamente los
       mortiños, seleccionando solo los mejores frutos para garantizar la
       calidad.
-    </p>
-  </div>
+    </div>
+  </li>
 
-  <div class="mb-8">
-    <h3 class="text-2xl font-bold mb-4">
-      Paso 2: Selección Manual de Mortiños
-    </h3>
-    <p>
+  <!--Second item-->
+  <li
+    data-te-stepper-step-ref
+    class="relative h-fit after:absolute after:left-[2.45rem] after:top-[3.6rem] after:mt-px after:h-[calc(100%-2.45rem)] after:w-px after:bg-[#e0e0e0] after:content-[''] ">
+    <div
+      data-te-stepper-head-ref
+      class="flex cursor-pointer items-center p-6 leading-[1.3rem] no-underline after:bg-[#e0e0e0] after:content-[''] hover:bg-[#f9f9f9] focus:outline-none">
+      <span
+        data-te-stepper-head-icon-ref
+        class="mr-3 flex h-[1.938rem] w-[1.938rem] items-center justify-center rounded-full bg-[#ebedef] text-sm font-medium text-[#40464f]">
+        2
+      </span>
+      <span
+        data-te-stepper-head-text-ref
+        class="text-neutral-500 after:absolute after:flex after:text-[0.8rem] after:content-[data-content]">
+        Selección Manual de Mortiños
+      </span>
+    </div>
+    <div
+      data-te-stepper-content-ref
+      class="transition-[height, margin-bottom, padding-top, padding-bottom] left-0 overflow-hidden pb-6 pl-[3.75rem] pr-6 duration-300 ease-in-out">
       Nuestros expertos enológicos realizan una selección minuciosa, escogiendo
       a mano cada mortiño para asegurar la frescura y pureza de la cosecha.
-    </p>
-  </div>
+    </div>
+  </li>
 
-  <div class="mb-8">
-    <h3 class="text-2xl font-bold mb-4">
-      Paso 3: Fermentación en Tinajas de Barro
-    </h3>
-    <p>
+  <!--Third item-->
+  <li data-te-stepper-step-ref class="relative h-fit">
+    <div
+      data-te-stepper-head-ref
+      class="flex cursor-pointer items-center p-6 leading-[1.3rem] no-underline after:bg-[#e0e0e0] after:content-[''] hover:bg-[#f9f9f9] focus:outline-none">
+      <span
+        data-te-stepper-head-icon-ref
+        class="mr-3 flex h-[1.938rem] w-[1.938rem] items-center justify-center rounded-full bg-[#ebedef] text-sm font-medium text-[#40464f]">
+        3
+      </span>
+      <span
+        data-te-stepper-head-text-ref
+        class="text-neutral-500 after:absolute after:flex after:text-[0.8rem] after:content-[data-content]">
+        Fermentación
+      </span>
+    </div>
+    <div
+      data-te-stepper-content-ref
+      class="transition-[height, margin-bottom, padding-top, padding-bottom] left-0 overflow-hidden pb-6 pl-[3.75rem] pr-6 duration-300 ease-in-out">
       Los mortiños seleccionados pasan por un proceso de fermentación en
       auténticas tinajas de barro, respetando las tradiciones locales y
       aportando matices únicos a nuestro vino.
-    </p>
-  </div>
-
-  <div class="mb-8">
-    <h3 class="text-2xl font-bold mb-4">
-      Paso 4: Añejamiento en Barricas de Roble
-    </h3>
-    <p>
+    </div>
+  </li>
+  <li data-te-stepper-step-ref class="relative h-fit">
+    <div
+      data-te-stepper-head-ref
+      class="flex cursor-pointer items-center p-6 leading-[1.3rem] no-underline after:bg-[#e0e0e0] after:content-[''] hover:bg-[#f9f9f9] focus:outline-none ">
+      <span
+        data-te-stepper-head-icon-ref
+        class="mr-3 flex h-[1.938rem] w-[1.938rem] items-center justify-center rounded-full bg-[#ebedef] text-sm font-medium text-[#40464f]">
+        3
+      </span>
+      <span
+        data-te-stepper-head-text-ref
+        class="text-neutral-500 after:absolute after:flex after:text-[0.8rem] after:content-[data-content] ">
+        Añejamiento
+      </span>
+    </div>
+    <div
+      data-te-stepper-content-ref
+      class="transition-[height, margin-bottom, padding-top, padding-bottom] left-0 overflow-hidden pb-6 pl-[3.75rem] pr-6 duration-300 ease-in-out">
       La magia continúa en nuestras barricas de roble, donde el vino adquiere
       complejidad y elegancia durante el periodo de añejamiento, creando un
       producto excepcional.
-    </p>
-  </div>
+    </div>
+  </li>
+</ul>
 </section>
+</div>
