--- a/src/app/components/testimonies/testimonies.component.html
+++ b/src/app/components/testimonies/testimonies.component.html
@@ -16,12 +16,12 @@
   <div class="mb-12 md:mb-0">
     <div class="mb-6 flex justify-center">
       <img
-        src="https://tecdn.b-cdn.net/img/Photos/Avatars/img%20(1).jpg"
+        src="https://scontent.fatf4-1.fna.fbcdn.net/v/t39.30808-6/418422515_384545184093895_2636524487822592251_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=efb6e6&_nc_eui2=AeFS6yAeCKYDKPunl0UGW9dSBuK8PWTo_p0G4rw9ZOj-nZdTpehPh-dRIhTbQVOQ1eCjeFU7C0kuzTn01YNsERnn&_nc_ohc=-hWXcb6yiEgAX8Ey-Jh&_nc_ht=scontent.fatf4-1.fna&oh=00_AfA6EJh7-fsG5tiuNC25nfkPW2JRWGWzvC9Xwgdf8Uy7LA&oe=65E1333D"
         class="w-32 rounded-full shadow-lg dark:shadow-black/30" alt="personas"/>
     </div>
-    <h5 class="mb-4 text-xl font-semibold">Maria Smantha</h5>
+    <h5 class="mb-4 text-xl font-semibold">Ada Mary</h5>
     <h6 class="mb-4 font-semibold text-primary dark:text-primary-500">
-      Web Developer
+      Cantante
     </h6>
     <p class="mb-4">
 
@@ -33,12 +33,12 @@
   <div class="mb-12 md:mb-0">
     <div class="mb-6 flex justify-center">
       <img
-        src="https://tecdn.b-cdn.net/img/Photos/Avatars/img%20(2).jpg"
+        src="../../../assets/images/Jhon.png"
         class="w-32 rounded-full shadow-lg" alt="personas" />
     </div>
-    <h5 class="mb-4 text-xl font-semibold">Lisa Cudrow</h5>
+    <h5 class="mb-4 text-xl font-semibold">Jhon Valverde</h5>
     <h6 class="mb-4 font-semibold text-primary">
-      Graphic Designer
+      Influencer
     </h6>
     <p class="mb-4">
       "No solo es una bebida, es una experiencia sensorial completa. Desde el primer sorbo, te transporta a los majestuosos páramos, creando recuerdos inolvidables."
@@ -47,12 +47,12 @@
   <div class="mb-12 md:mb-0">
     <div class="mb-6 flex justify-center">
       <img
-        src="https://tecdn.b-cdn.net/img/Photos/Avatars/img%20(2).jpg"
+        src="../../../assets/images/Tañita.png"
         class="w-32 rounded-full shadow-lg" alt="personas"/>
     </div>
-    <h5 class="mb-4 text-xl font-semibold">Lisa Cudrow</h5>
+    <h5 class="mb-4 text-xl font-semibold">Tañita Cardona</h5>
     <h6 class="mb-4 font-semibold text-primary">
-      Graphic Designer
+      Cantante
     </h6>
     <p class="mb-4">
 
