--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,6 +2,6 @@
   <h2 class="text-5xl"> Contactanos </h2>
   <div class="flex justify-between mt-5 items-center">
   <p>Estas interezado en nuestros productos, ponte en contacto con nosotros</p>
-  <button type="button" class="px-6 pb-2 pt-2.5 bg-blue-900 rounded-lg text-white hover:bg-blue-800 ">Contactanos Ahora</button>
+  <a type="button" class="px-6 pb-2 pt-2.5 bg-blue-900 rounded-lg text-white hover:bg-blue-800 "  href="https://wa.link/rwbvzz" target="_blank" >Contactanos Ahora</a>
   </div>
 </div>
