--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -75,7 +75,7 @@
               />
             </svg>
           </a>
-          <a
+          <!-- <a
             class="bg-white text-red-600 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 cursor-pointer"
             type="button"
           >
@@ -90,7 +90,7 @@
               />
             </svg>
           </a>
-        </div>
+ -->        </div>
       </div>
       <div class="w-full lg:w-6/12 px-4">
         <div class="flex flex-wrap items-top mb-6">
