--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <app-history></app-history>
 <app-products></app-products>
 <app-galery></app-galery>
-<app-process></app-process>
+<!-- <app-process></app-process> -->
 <app-testimonies></app-testimonies>
 <app-contact></app-contact>
 <app-footer></app-footer>
