--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8" id="contactanos">
-  <h2 class="text-5xl"> Contactanos </h2>
+  <h2 class="text-5xl"> Contáctanos </h2>
   <div class="flex justify-between mt-5 items-center">
-  <p>Estas interezado en nuestros productos, ponte en contacto con nosotros</p>
-  <a type="button" class="px-6 pb-2 pt-2.5 bg-blue-900 rounded-lg text-white hover:bg-blue-800 "  href="https://wa.link/rwbvzz" target="_blank" >Contactanos Ahora</a>
+  <p>Estás interesado en nuestros productos, ponte en contacto con nosotros</p>
+  <a type="button" class="px-6 pb-2 pt-2.5 bg-blue-900 rounded-lg text-white hover:bg-blue-800 "  href="https://wa.link/rwbvzz" target="_blank" >Contáctanos Ahora</a>
   </div>
 </div>
