--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -123,7 +123,7 @@
                 <a
                   class="text-blueGray-600 hover:text-blueGray-800 font-semibold block pb-2 text-sm"
                   href="#contactanos"
-                  >Contactanos</a
+                  >Contactos</a
                 >
               </li>
             </ul>
