--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -38,7 +38,7 @@
           </button>
         </div>
         <div class="mt-6 flow-root text-white">
-          <div class="-my-6 divide-y divide-gray-500/10">
+          <div class="-my-6 divide-y divide-gray-500/10"  (click)="toggleMenu()">
             <div class="space-y-2 py-6">
               <a href="#historia" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">HISTORIA</a>
               <a href="#productos" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7  hover:bg-blue-900">PRODUCTOS</a>
