--- a/src/app/components/hero-section/hero-section.component.html
+++ b/src/app/components/hero-section/hero-section.component.html
@@ -1,7 +1,7 @@
 <div class=" bg-image">
   <div class="mx-auto max-w-7xl py-24 sm:px-6 sm:py-32 lg:px-8">
     <div class="relative overflow-hidden px-6 pt-16  sm:px-16 md:pt-24 lg:flex lg:gap-x-52 lg:px-24 lg:pt-0">
-      <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left">
+      <div class=" mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left ">
         <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">El Último Inca.</h2>
         <p class="mt-6 text-lg leading-8 ">
           Un exquisito vino que encuentra su origen en las pintorescas faldas de los Ilinizas, elaborado por los mismos
@@ -13,8 +13,10 @@
             Historia</a>
         </div>
       </div>
-      <div class="relative mt-24 h-80 flex items-center justify-center sm:hidden lg:inline-flex">
-        <img class="top-0 w-[12rem]" src="../../../assets/images/vino.png" alt="Vino" width="100%" height="100%">
+      <div class="hidden lg:flex">
+        <div class="relative mt-24 h-80 flex items-center justify-center lg:inline-flex">
+          <img class="top-0 w-[12rem]" src="../../../assets/images/vino.png" alt="Vino" width="100%" height="100%">
+        </div>
       </div>
     </div>
   </div>
