--- a/src/app/components/testimonies/testimonies.component.html
+++ b/src/app/components/testimonies/testimonies.component.html
@@ -16,7 +16,7 @@
   <div class="mb-12 md:mb-0">
     <div class="mb-6 flex justify-center">
       <img
-        src="https://scontent.fatf4-1.fna.fbcdn.net/v/t39.30808-6/418422515_384545184093895_2636524487822592251_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=efb6e6&_nc_eui2=AeFS6yAeCKYDKPunl0UGW9dSBuK8PWTo_p0G4rw9ZOj-nZdTpehPh-dRIhTbQVOQ1eCjeFU7C0kuzTn01YNsERnn&_nc_ohc=-hWXcb6yiEgAX8Ey-Jh&_nc_ht=scontent.fatf4-1.fna&oh=00_AfA6EJh7-fsG5tiuNC25nfkPW2JRWGWzvC9Xwgdf8Uy7LA&oe=65E1333D"
+        src="../../../assets/images/AdaMary.jpg"
         class="w-32 rounded-full shadow-lg dark:shadow-black/30" alt="personas"/>
     </div>
     <h5 class="mb-4 text-xl font-semibold">Ada Mary</h5>
