change link facebook

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,7 +8,7 @@
           <a
             class="bg-white text-blue-600 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 cursor-pointer"
             type="button"
-            href="https://www.facebook.com/vino.elultimoincaoficial?mibextid=ZbWKwL"
+            href="https://www.facebook.com/profile.php?id=100066712369201&mibextid=ZbWKwL"
             target="_blank"
           >
             <svg
